package v2;

public class Main
{
    public static void main(String[] args)
    {
        new MyOwnTest().run(new GameController());
    }
}